Console: Add wrapper log clear button (ticket #2449)